# DA_FAST_API

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/versions/: 00929f208960_change_relationship.py  02b89987c298_change_relationship_tag_v2.py  14b9cde99ca5_add_owner_apartment_and_approved_field.py  16318f1d6ec6_add_rate_and_desc.py  19673f634489_delete_oncacade_and_foreignkey_can_is_.py  1e232482153e_owner_aparment_is_null.py  27085222a057_build_base.py  3534408050a0_change_a_way_store_images_apartment.py  3827af3968ce_add_address_for_aparment.py  3bc945a60908_change_type_col_system_role.py  4444eae69fc6_change_name_apartment_tag.py  4cccb8621d3a_add_create_at_to_feature_chat.py  597201d659dc_add_status_for_contract.py  5bcfbfdc5595_add_column_create_at.py  63b901e26ec4_create_table_user_apartment.py  6ca7a5677acf_change_desc_type_from_string255_to_text.py  6ce6e3dbb8fd_build_feature_chat.py  6ecb548bf023_address_for_user.py  72041a08a102_first_create.py  743c878e00d0_change_type_id_of_apartment_images.py  82700bb19e8b_add_amenity_table.py  83eafcf34b8c_add_unique_for_room_apartment.py  95507121d9bf_add_table_apartment_comment.py  9a69a3dd8876_change_relationship_tag.py  9ae29a3b2d33_add_field_verify_code_and_verify.py  a923442e8d62_add_service_bill_contract_notication.py  b1371afb21d2_change_table_apartment.py  b2d3ad1e8ea9_upgrade_type_char_of_apartment_name_.py  b890fa5f01e0_add_field_apartment_type.py  be3d7a62a6d5_add_desc_for_amenity.py  cf606252e069_add_user_id_foreignkey_in_apartment.py  (+2 more)
app/: database.py  main.py  routers.py  socket.py
(+38 files in other folders)
