[tool.poetry]
name = "da-be"
version = "0.1.0"
description = "DA"
authors = ["huyhg2521@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
pydantic = "^2.3.0"
alembic = "^1.12.0"
python-decouple = "^3.8"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
